hadra-lang/src/test/resources/net/vpc/hadralang/test/compiler/success/testCompilerSuccess0024.hl
package net.vpc.hadralang.test:test07;
/**
 * tested :
 *   * FIXED : while statement
 */
def void main(String[] args){

    int b=3;
    while(b>0){
        println(b--);
    }
}
