hadra-lang/src/test/resources/net/vpc/hadralang/test/compiler/fail/testCompilerFail0018.hl
package net.vpc.hlexamples;
String[] args;
String[] args;
String[] a,a;
int z;
{
    println("hello world");
    int a=z;
    int z;
}